xidlc/tests/snapshots/codegen_snapshot__c__const_dec.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_dec.c
===============
#include"const_dec.h"
===============
const_dec.h
===============
#ifndef CONST_DEC_H
#define CONST_DEC_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int32_t a = 10;
#endif
===============
const_dec_xcdr.c
===============
#include"const_dec_xcdr.h"
===============
const_dec_xcdr.h
===============
#ifndef CONST_DEC_XCDR_H
#define CONST_DEC_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
