xidlc/tests/snapshots/codegen_snapshot__c__const_hex.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_hex.c
===============
#include"const_hex.h"
===============
const_hex.h
===============
#ifndef CONST_HEX_H
#define CONST_HEX_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int32_t a = 0xff;
#endif
===============
const_hex_xcdr.c
===============
#include"const_hex_xcdr.h"
===============
const_hex_xcdr.h
===============
#ifndef CONST_HEX_XCDR_H
#define CONST_HEX_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
