xidlc/tests/snapshots/codegen_snapshot__c__const_oct.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_oct.c
===============
#include"const_oct.h"
===============
const_oct.h
===============
#ifndef CONST_OCT_H
#define CONST_OCT_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int32_t a = 0 o10;
#endif
===============
const_oct_xcdr.c
===============
#include"const_oct_xcdr.h"
===============
const_oct_xcdr.h
===============
#ifndef CONST_OCT_XCDR_H
#define CONST_OCT_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
