xidlc/tests/snapshots/codegen_snapshot__c__const_scoped_name.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_scoped_name.c
===============
#include"const_scoped_name.h"
===============
const_scoped_name.h
===============
#ifndef CONST_SCOPED_NAME_H
#define CONST_SCOPED_NAME_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int a = 0;
static const uint8_t a = 0;
static const uint16_t a = 0;
static const uint32_t a = 0;
static const uint64_t a = 0;
static const int8_t a = 0;
static const int16_t a = 0;
static const int32_t a = 0;
static const int64_t a = 0;
static const char8 a = 0;
static const char16 a = 0;
static const char C1 = 'X';
static const wchar_t C2 = L'X';
static const const char * C3 = "aaa";
static const const wchar_t * C3 = L"aaa";
static const bool C3 = false;
static const A a = 0;
static const A_B a = 0;
static const A_B_C a = 0;
static const A_B_C_D_E_F a = 0;
static const M_Size MYSIZE = M_medium;
static const double const_float = 13.1;
static const double const_double = 84.1;
static const double const_longdouble = 46.1;
#endif
===============
const_scoped_name_xcdr.c
===============
#include"const_scoped_name_xcdr.h"
===============
const_scoped_name_xcdr.h
===============
#ifndef CONST_SCOPED_NAME_XCDR_H
#define CONST_SCOPED_NAME_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
