xidlc/tests/snapshots/codegen_snapshot__c__except_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
except_dcl.c
===============
#include"except_dcl.h"
===============
except_dcl.h
===============
#ifndef EXCEPT_DCL_H
#define EXCEPT_DCL_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
===============
except_dcl_xcdr.c
===============
#include"except_dcl_xcdr.h"
===============
except_dcl_xcdr.h
===============
#ifndef EXCEPT_DCL_XCDR_H
#define EXCEPT_DCL_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
